# Batesian

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  _commit_msg.txt  embed.go  go.mod
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: ci.yml  codeql.yml
cmd/batesian/: main.go
docs/: ci-cd.md  comparison.md  demo.tape  rules-a2a.md  rules-mcp.md
internal/attack/: executor.go  export_test.go  http.go  http_test.go
internal/auth/: export_test.go  oauth.go  oauth_test.go  pkce_browser.go  pkce_browser_test.go
internal/cli/: init_config.go  probe.go  root.go  scan.go
internal/config/: config.go  config_test.go
internal/engine/: engine.go  engine_test.go
internal/oob/: listener.go
internal/report/: printer.go  printer_test.go  sarif.go
internal/rules/: loader.go  loader_test.go  rule.go
sdk/python/: README.md  pyproject.toml
sdk/python/batesian/: __init__.py  _binary.py  _models.py  _scanner.py
sdk/python/tests/: test_binary.py  test_models.py  test_scanner.py
testdata/: README.md  a2a_new_rules_server.py  a2a_remaining_rules_server.py  a2a_skill_url_server.py  a2a_tls_capinflation_server.py  a2a_vulnerable_server.py  mcp_flood_namespace_sse_server.py  mcp_injection_server.py  mcp_new_rules_server.py  mcp_oauth_audience_server.py  mcp_oauth_dcr_server.py  mcp_poison_server.py  mcp_unauth_resources_server.py  mockserver.go
(+110 files in other folders)
